changed formatting according to palantir-java-format